Update itinerary activities and links

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       { id: 'license', label: '带好日本驾照 + 国际驾照 (IDP)' },
       { id: 'diamond-head', label: '抢 12/31 钻石头山门票 (8:00 AM)' },
       { id: 'reservations', label: '预订 Chief\'s Luau (1/2) 和 魔鬼鱼夜潜 (1/3)' },
-      { id: 'booster', label: '购买儿童汽车增高垫 (Booster)' },
+      { id: 'booster', label: '购买浮潜面镜和呼吸管' },
       { id: 'jacket', label: '带厚外套 (Mauna Kea 观星用)' }
     ];
 
@@ -76,13 +76,13 @@
         { time: '晚餐', activity: 'Monkeypod Kitchen', note: '尝试 Mai Tai 鸡尾酒', link: 'https://www.monkeypodkitchen.com/' }
       ], tasks: ['去 ABC Store 买水母衣和防晒霜'] },
       { day: 2, date: '12/30', title: '海龟峡谷 (Turtle Canyon)', locationQuery: 'Turtle Canyon Snorkel', items: [
-        { time: '09:00', activity: 'Holokai Catamaran 船潜', note: '寻找海龟', link: 'https://holokaicatamaran.com/' },
+        { time: '09:00', activity: 'Holokai Catamaran 船潜', note: '寻找海龟', link: 'https://www.sailholokai.com/' },
         { time: '中午', activity: 'Musubi Cafe Iyasume 饭团', note: '人气餐点', link: 'https://www.iyasumehawaii.com/' },
         { time: '下午', activity: '威基基逛街或午睡', note: '休息恢复体力' },
         { time: '晚餐', activity: 'Marukame Udon 或 Paia Fish Market', link: 'https://www.marugameudon.com/' }
       ]},
       { day: 3, date: '12/31', title: '钻石头山 & 跨年烟花', locationQuery: 'Diamond Head State Monument', items: [
-        { time: '08:00', activity: '爬钻石头山', note: '需提前预约', link: 'https://dlnr.hawaii.gov/dsp/parks/oahu/diamond-head-state-monument/' },
+        { time: '08:00', activity: '爬钻石头山', note: '需提前预约', link: 'https://gostateparks.hawaii.gov/diamondhead' },
         { time: '午餐', activity: 'Pioneer Saloon 这里的盒饭非常棒', link: 'http://pioneer-saloon.net/' },
         { time: '14:00', activity: '全家强制午睡', note: '为跨年夜储备能量' },
         { time: '23:55', activity: '沙滩看跨年烟花', note: '迎来 2026 年！' }
@@ -90,7 +90,7 @@
       { day: 4, date: '1/1', title: '搬家 & 西岸奥特莱斯', locationQuery: 'Waikele Premium Outlets', items: [
         { time: '上午', activity: '取车 (Enterprise)', note: '前往西岸' },
         { time: '中午', activity: 'Waikele Outlets 购物', note: '新年开购', link: 'https://www.premiumoutlets.com/outlet/waikele' },
-        { time: '下午', activity: '入住 Embassy Suites Kapolei', note: '泻湖浮潜' }
+        { time: '下午', activity: '入住 Embassy Suites Kapolei酒店', note: '泻湖浮潜' }
       ]},
       { day: 5, date: '1/2', title: '珍珠港 & 鲁奥晚宴', locationQuery: 'USS Missouri', items: [
         { time: '上午', activity: '密苏里号战列舰', link: 'https://www.ussmissouri.org/' },
@@ -100,7 +100,7 @@
       { day: 6, date: '1/3', title: '登陆大岛 (Big Island)', locationQuery: 'Keauhou Bay', items: [
         { time: '上午', activity: '飞往大岛 Kona (KOA)', note: '机场取车' },
         { time: '下午', activity: '入住 Kings\' Land', note: '玩酒店滑梯泳池' },
-        { time: '晚上', activity: '魔鬼鱼夜潜', note: '震撼体验', link: 'https://www.mantarayadv.com/' }
+        { time: '晚上', activity: '魔鬼鱼夜潜', note: '震撼体验', link: 'https://seaparadise.com/1st-manta-ray-snorkel-tour/' }
       ]},
       { day: 7, date: '1/4', title: '火山国家公园', locationQuery: 'Hawaii Volcanoes National Park', items: [
         { time: '下午', activity: '火山公园深度游', link: 'https://www.nps.gov/havo/index.htm' },
@@ -108,7 +108,7 @@
       ]},
       { day: 8, date: '1/5', title: '观鲸 & Mauna Kea 星空', locationQuery: 'Mauna Kea', items: [
         { time: '上午', activity: '海岸观鲸', note: '运气大考验' },
-        { time: '16:00', activity: 'Mauna Kea 游客中心', note: '穿上羽绒服', link: 'https://www.ifa.hawaii.edu/info/vis/' },
+        { time: '16:00', activity: 'Mauna Kea 游客中心', note: '穿上羽绒服', link: 'https://hilo.hawaii.edu/maunakea/visitor-information/station' },
         { time: '18:00', activity: '看云海日落 & 观星', note: '顶级体验' }
       ]},
       { day: 9, date: '1/6', title: '重返檀香山', locationQuery: 'Ala Moana Center', items: [
