--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       { day: 5, date: '1/2', title: '珍珠港 & 鲁奥晚宴', locationQuery: 'USS Missouri', items: [
         { time: '上午', activity: '密苏里号战列舰', link: 'https://www.ussmissouri.org/' },
         { time: '14:45', activity: '亚利桑那号纪念馆', link: 'https://www.nps.gov/valr/index.htm' },
-        { time: '17:30', activity: 'Chief\'s Luau 晚宴', link: 'https://www.chiefsluau.com/' }
+        { time: '17:30', activity: 'Auana表演', link: 'www.cirquedusoleil.com/auana' }
       ]},
       { day: 6, date: '1/3', title: '登陆大岛 (Big Island)', locationQuery: 'Keauhou Bay', items: [
         { time: '上午', activity: '飞往大岛 Kona (KOA)', note: '机场取车' },
